Apply Automatic Formatting
Prior to this change, the codebase was unformatted.

This change formats the codebase with IntelliJs default code
reformatting.