@@ -8,18 +8,16 @@
  */
 package memoranda;
 
-import java.util.Collection;
-import java.util.Vector;
-
 import memoranda.date.CalendarDate;
 import memoranda.date.CurrentDate;
-
-import java.util.Calendar;
-
 import nu.xom.Attribute;
 import nu.xom.Element;
 import nu.xom.Elements;
 import nu.xom.Node;
+
+import java.util.Calendar;
+import java.util.Collection;
+import java.util.Vector;
 
 /**
  *
@@ -47,92 +45,89 @@ public class TaskImpl implements Task, Comparable {
     }
 
     public void setStartDate(CalendarDate date) {
-           setAttr("startDate", date.toString());
+        setAttr("startDate", date.toString());
     }
 
     public CalendarDate getEndDate() {
-		String ed = _element.getAttribute("endDate").getValue();
-		if (ed != "")
-			return new CalendarDate(_element.getAttribute("endDate").getValue());
-		Task parent = this.getParentTask();
-		if (parent != null)
-			return parent.getEndDate();
-		Project pr = this._tl.getProject();
-		if (pr.getEndDate() != null)
-			return pr.getEndDate();
-		return this.getStartDate();
-        
+        String ed = _element.getAttribute("endDate").getValue();
+        if (ed != "")
+            return new CalendarDate(_element.getAttribute("endDate").getValue());
+        Task parent = this.getParentTask();
+        if (parent != null)
+            return parent.getEndDate();
+        Project pr = this._tl.getProject();
+        if (pr.getEndDate() != null)
+            return pr.getEndDate();
+        return this.getStartDate();
+
     }
 
     public void setEndDate(CalendarDate date) {
-		if (date == null)
-			setAttr("endDate", "");
-		setAttr("endDate", date.toString());
+        if (date == null)
+            setAttr("endDate", "");
+        setAttr("endDate", date.toString());
     }
 
     public long getEffort() {
-    	Attribute attr = _element.getAttribute("effort");
-    	if (attr == null) {
-    		return 0;
-    	}
-    	else {
-    		try {
-        		return Long.parseLong(attr.getValue());
-    		}
-    		catch (NumberFormatException e) {
-    			return 0;
-    		}
-    	}
+        Attribute attr = _element.getAttribute("effort");
+        if (attr == null) {
+            return 0;
+        } else {
+            try {
+                return Long.parseLong(attr.getValue());
+            } catch (NumberFormatException e) {
+                return 0;
+            }
+        }
     }
 
     public void setEffort(long effort) {
         setAttr("effort", String.valueOf(effort));
     }
-	
-	/* 
-	 * @see net.sf.memoranda.Task#getParentTask()
-	 */
-	public Task getParentTask() {
-		Node parentNode = _element.getParent();
-    	if (parentNode instanceof Element) {
-    	    Element parent = (Element) parentNode;
-        	if (parent.getLocalName().equalsIgnoreCase("task")) 
-        	    return new TaskImpl(parent, _tl);
-    	}
-    	return null;
-	}
-	
-	public String getParentId() {
-		Task parent = this.getParentTask();
-		if (parent != null)
-			return parent.getID();
-		return null;
-	}
+
+    /*
+     * @see net.sf.memoranda.Task#getParentTask()
+     */
+    public Task getParentTask() {
+        Node parentNode = _element.getParent();
+        if (parentNode instanceof Element parent) {
+            if (parent.getLocalName().equalsIgnoreCase("task"))
+                return new TaskImpl(parent, _tl);
+        }
+        return null;
+    }
+
+    public String getParentId() {
+        Task parent = this.getParentTask();
+        if (parent != null)
+            return parent.getID();
+        return null;
+    }
 
     public String getDescription() {
-    	Element thisElement = _element.getFirstChildElement("description");
-    	if (thisElement == null) {
-    		return null;
-    	}
-    	else {
-       		return thisElement.getValue();
-    	}
+        Element thisElement = _element.getFirstChildElement("description");
+        if (thisElement == null) {
+            return null;
+        } else {
+            return thisElement.getValue();
+        }
     }
 
     public void setDescription(String s) {
-    	Element desc = _element.getFirstChildElement("description");
-    	if (desc == null) {
-        	desc = new Element("description");
+        Element desc = _element.getFirstChildElement("description");
+        if (desc == null) {
+            desc = new Element("description");
             desc.appendChild(s);
-            _element.appendChild(desc);    	
-    	}
-    	else {
+            _element.appendChild(desc);
+        } else {
             desc.removeChildren();
-            desc.appendChild(s);    	
-    	}
+            desc.appendChild(s);
+        }
     }
 
-    /**s
+    /**
+     * s
+     *
      * @see memoranda.Task#getStatus()
      */
     public int getStatus(CalendarDate date) {
@@ -141,26 +136,27 @@ public class TaskImpl implements Task, Comparable {
         if (isFrozen())
             return Task.FROZEN;
         if (isCompleted())
-                return Task.COMPLETED;
-        
-		if (date.inPeriod(start, end)) {
+            return Task.COMPLETED;
+
+        if (date.inPeriod(start, end)) {
             if (date.equals(end))
                 return Task.DEADLINE;
             else
                 return Task.ACTIVE;
+        } else if (date.before(start)) {
+            return Task.SCHEDULED;
         }
-		else if(date.before(start)) {
-				return Task.SCHEDULED;
-		}
-		
-		if(start.after(end)) {
-			return Task.ACTIVE;
-		}
+
+        if (start.after(end)) {
+            return Task.ACTIVE;
+        }
 
         return Task.FAILED;
     }
+
     /**
      * Method isDependsCompleted.
+     *
      * @return boolean
      */
 /*
@@ -200,7 +196,7 @@ public class TaskImpl implements Task, Comparable {
     public String toString() {
         return getText();
     }
-    
+
     /**
      * @see memoranda.Task#setText()
      */
@@ -238,6 +234,7 @@ public class TaskImpl implements Task, Comparable {
         }
         return v;
     }
+
     /**
      * @see memoranda.Task#addDependsFrom(memoranda.Task)
      */
@@ -246,6 +243,7 @@ public class TaskImpl implements Task, Comparable {
         dep.addAttribute(new Attribute("idRef", task.getID()));
         _element.appendChild(dep);
     }
+
     /**
      * @see memoranda.Task#removeDependsFrom(memoranda.Task)
      */
@@ -259,19 +257,22 @@ public class TaskImpl implements Task, Comparable {
             }
         }
     }
+
     /**
      * @see memoranda.Task#getProgress()
      */
     public int getProgress() {
-        return new Integer(_element.getAttribute("progress").getValue()).intValue();
+        return Integer.parseInt(_element.getAttribute("progress").getValue());
     }
+
     /**
      * @see memoranda.Task#setProgress(int)
      */
     public void setProgress(int p) {
         if ((p >= 0) && (p <= 100))
-            setAttr("progress", new Integer(p).toString());
+            setAttr("progress", Integer.valueOf(p).toString());
     }
+
     /**
      * @see memoranda.Task#getPriority()
      */
@@ -279,8 +280,9 @@ public class TaskImpl implements Task, Comparable {
         Attribute pa = _element.getAttribute("priority");
         if (pa == null)
             return Task.PRIORITY_NORMAL;
-        return new Integer(pa.getValue()).intValue();
+        return Integer.parseInt(pa.getValue());
     }
+
     /**
      * @see memoranda.Task#setPriority(int)
      */
@@ -291,35 +293,36 @@ public class TaskImpl implements Task, Comparable {
     private void setAttr(String a, String value) {
         Attribute attr = _element.getAttribute(a);
         if (attr == null)
-           _element.addAttribute(new Attribute(a, value));
+            _element.addAttribute(new Attribute(a, value));
         else
             attr.setValue(value);
     }
 
-	/**
-	 * A "Task rate" is an informal index of importance of the task
-	 * considering priority, number of days to deadline and current 
-	 * progress. 
-	 * 
-	 * rate = (100-progress) / (numOfDays+1) * (priority+1)
-	 * @param CalendarDate
-	 * @return long
-	 */
+    /**
+     * A "Task rate" is an informal index of importance of the task
+     * considering priority, number of days to deadline and current
+     * progress.
+     * <p>
+     * rate = (100-progress) / (numOfDays+1) * (priority+1)
+     *
+     * @param CalendarDate
+     * @return long
+     */
 
-	private long calcTaskRate(CalendarDate d) {
-		Calendar endDateCal = getEndDate().getCalendar();
-		Calendar dateCal = d.getCalendar();
-		int numOfDays = (endDateCal.get(Calendar.YEAR)*365 + endDateCal.get(Calendar.DAY_OF_YEAR)) - 
-						(dateCal.get(Calendar.YEAR)*365 + dateCal.get(Calendar.DAY_OF_YEAR));
-		if (numOfDays < 0) return -1; //Something wrong ?
-		return (100-getProgress()) / (numOfDays+1) * (getPriority()+1);
-	}
+    private long calcTaskRate(CalendarDate d) {
+        Calendar endDateCal = getEndDate().getCalendar();
+        Calendar dateCal = d.getCalendar();
+        int numOfDays = (endDateCal.get(Calendar.YEAR) * 365 + endDateCal.get(Calendar.DAY_OF_YEAR)) -
+                (dateCal.get(Calendar.YEAR) * 365 + dateCal.get(Calendar.DAY_OF_YEAR));
+        if (numOfDays < 0) return -1; //Something wrong ?
+        return (long) (100 - getProgress()) / (numOfDays + 1) * (getPriority() + 1);
+    }
 
     /**
      * @see memoranda.Task#getRate()
      */
-	 
-     public long getRate() {
+
+    public long getRate() {
 /*	   Task t = (Task)task;
 	   switch (mode) {
 		   case BY_IMP_RATE: return -1*calcTaskRate(t, date);
@@ -329,36 +332,36 @@ public class TaskImpl implements Task, Comparable {
 	   }
        return -1;
 */
-		return -1*calcTaskRate(CurrentDate.get());
-	 }
-	   
-	 /*
-	  * Comparable interface
-	  */
-	  
-	 public int compareTo(Object o) {
-		 Task task = (Task) o;
-		 	if(getRate() > task.getRate())
-				return 1;
-			else if(getRate() < task.getRate())
-				return -1;
-			else 
-				return 0;
-	 }
-	 
-	 public boolean equals(Object o) {
-	     return ((o instanceof Task) && (((Task)o).getID().equals(this.getID())));
-	 }
+        return -1 * calcTaskRate(CurrentDate.get());
+    }
 
-	/* 
-	 * @see net.sf.memoranda.Task#getSubTasks()
-	 */
-	public Collection getSubTasks() {
-		Elements subTasks = _element.getChildElements("task");
-            return convertToTaskObjects(subTasks);
-	}
+    /*
+     * Comparable interface
+     */
 
-	private Collection convertToTaskObjects(Elements tasks) {
+    public int compareTo(Object o) {
+        Task task = (Task) o;
+        if (getRate() > task.getRate())
+            return 1;
+        else if (getRate() < task.getRate())
+            return -1;
+        else
+            return 0;
+    }
+
+    public boolean equals(Object o) {
+        return ((o instanceof Task) && (((Task) o).getID().equals(this.getID())));
+    }
+
+    /*
+     * @see net.sf.memoranda.Task#getSubTasks()
+     */
+    public Collection getSubTasks() {
+        Elements subTasks = _element.getChildElements("task");
+        return convertToTaskObjects(subTasks);
+    }
+
+    private Collection convertToTaskObjects(Elements tasks) {
         Vector v = new Vector();
         for (int i = 0; i < tasks.size(); i++) {
             Task t = new TaskImpl(tasks.get(i), _tl);
@@ -366,29 +369,29 @@ public class TaskImpl implements Task, Comparable {
         }
         return v;
     }
-	
-	/* 
-	 * @see net.sf.memoranda.Task#getSubTask(java.lang.String)
-	 */
-	public Task getSubTask(String id) {
-		Elements subTasks = _element.getChildElements("task");
-		for (int i = 0; i < subTasks.size(); i++) {
-			if (subTasks.get(i).getAttribute("id").getValue().equals(id))
-				return new TaskImpl(subTasks.get(i), _tl);
-		}
-		return null;
-	}
 
-	/* 
-	 * @see net.sf.memoranda.Task#hasSubTasks()
-	 */
-	public boolean hasSubTasks(String id) {
-		Elements subTasks = _element.getChildElements("task");
-		for (int i = 0; i < subTasks.size(); i++) 
-			if (subTasks.get(i).getAttribute("id").getValue().equals(id))
-				return true;
-		return false;
-	}
+    /*
+     * @see net.sf.memoranda.Task#getSubTask(java.lang.String)
+     */
+    public Task getSubTask(String id) {
+        Elements subTasks = _element.getChildElements("task");
+        for (int i = 0; i < subTasks.size(); i++) {
+            if (subTasks.get(i).getAttribute("id").getValue().equals(id))
+                return new TaskImpl(subTasks.get(i), _tl);
+        }
+        return null;
+    }
 
-	
+    /*
+     * @see net.sf.memoranda.Task#hasSubTasks()
+     */
+    public boolean hasSubTasks(String id) {
+        Elements subTasks = _element.getChildElements("task");
+        for (int i = 0; i < subTasks.size(); i++)
+            if (subTasks.get(i).getAttribute("id").getValue().equals(id))
+                return true;
+        return false;
+    }
+
+
 }
